--- a/src/main/resources/templates/property-details.html
+++ b/src/main/resources/templates/property-details.html
@@ -40,6 +40,8 @@
 
   <form th:action="@{'/admin/properties/delete/' + ${property.id}}" method="post"
         style="display:inline;" onsubmit="return confirm('Czy na pewno chcesz usunąć ogłoszenie?');">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
     <button type="submit">Usuń</button>
   </form>
 </div>
