--- a/src/main/resources/templates/admin/user-panel.html
+++ b/src/main/resources/templates/admin/user-panel.html
@@ -28,6 +28,7 @@
                 <form th:action="@{'/admin/users/delete/' + ${user.id}}" method="post"
                       th:attr="data-username=${user.username}"
                       onsubmit="return confirmDelete(this.getAttribute('data-username'))">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <button type="submit">Usuń</button>
                 </form>
             </div>
