--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,6 +25,8 @@
     </div>
 
     <form th:action="@{/login}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
         <label>Login: <input type="text" name="username" /></label><br/>
         <label>Hasło: <input type="password" name="password" /></label><br/>
         <button type="submit">Zaloguj</button>
