--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,6 +23,7 @@
   </div>
 
   <form th:action="@{/register}" method="post">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <label>Login: <input type="text" name="username" /></label><br/>
     <label>Hasło: <input type="password" name="password" /></label><br/>
     <button type="submit">Zarejestruj</button>
