--- a/src/main/resources/templates/users/edit-property.html
+++ b/src/main/resources/templates/users/edit-property.html
@@ -8,6 +8,7 @@
 <h1>Edytuj ogłoszenie (Admin)</h1>
 
 <form th:action="@{'/admin/properties/edit/' + ${property.id}}" th:object="${property}" method="post" enctype="multipart/form-data">
+  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
   <label>Tytuł:
     <input type="text" th:field="*{title}" required />
   </label><br/>
